--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
         <!-- customized CSS-->
         <link href="style.css" rel="stylesheet">
         <!-- script -->
-        <script type='module' src="welcome.js" defer></script>
-        <!-- <script type='module' src="main.js" defer></script> -->
+        <script type='module' src="main.js" defer></script>
         <script>
           function reload() {
             const keyboardEvent = new KeyboardEvent('keypress', { key: 'Enter' });
