designed responsively, fix toggle collapse

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg navbar pt-3 ps-5 pe-5" id="navbar">
+            <nav class="navbar fixed-top navbar-expand-lg navbar ps-5 pe-5" id="navbar">
                 <div class="container-fluid">
                   <a class="navbar-brand signature" onclick="reload()" id="logo"></a>
                   <button class="navbar-toggler" id='toggler' type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -73,7 +73,7 @@
               <div class="pt-5" id="about">
                 <h2 class="box"><span class="text-primary fs-2 pt-2 pb-2">About Me</span></h2>
                 <div class="row pt-3 pb-3">
-                    <div class="col-lg-8 col-md-12 col-sm-12 fs-4 mb-4 mt-2 ps-4">
+                    <div class="col-lg-8 col-md-12 col-sm-12 fs-4 mb-4 mt-2 ps-4" id="about-text">
                       Hello! My name is Jack and I love building applications that impact the human kind and leave a mark on the world!
                       <br><br>
                       My interest in web development was piqued back in 2018 when I came across <a href="https://www.shopify.com">Shopify</a>,
@@ -211,9 +211,9 @@
                 <div class="card-body">  
                   <span class="card-title">Vibe</span>
                   <div class="card-caption">
-                    I worked with a few friends to create this application with the goal of enhancing experience of party hosts and guests.
-                    Guests can pick their favorite songs and add them to the queue where everyone votes for the next song.
-                    I gained more knowledge in using Express, REST APIs and NoSQL in this project.
+                    I worked with a few friends to create this application with the goal of enhancing experience of party hosts and guests.<br>
+                    Guests can pick their favorite songs and add them to the queue where everyone votes for the next song.<br>
+                    By building this project, I gained more experience and knowledge on using Express, REST APIs and NoSQL.
                   </div>
                 </div>
                 <div class="card-footer">
@@ -229,26 +229,15 @@
                 <div class="card-body">
                   <span class="card-title">Habita</span>
                   <div class="card-caption">
-                    An application to store and keep track of tasks and habits securely and without a mess.
-                    I built it using JS, HTML, CSS for the frontend, Node.js for the backend, then deploy it on Heroku.
-                    I built this project to gain experience in building web applications.
+                    An application to store and keep track of tasks and habits securely and without a mess.<br>
+                    By using JS, HTML, CSS for frontend, Node.js for backend, Heroku for app deployment.<br>
+                    I built this project to gain experience in building web applications by using basic web development languages. 
                   </div>
                 </div>
                 <div class="card-footer">
                   <h6>HTML CSS JS Heroku</h6>
                 </div>
               </div>
-              <div class="card bg-secondary">
-                <img src="assets/website.png" alt="Jack-website">
-                <div class="card-body">
-                  <span class="card-title">Personalportfolio</span>
-                </div>
-                <div class="card-footer">
-                  <h6>HTML CSS JS Bootstrap</h6>
-                </div>
-              </div>
-            </div>
-            <div class="card-group gap-4 justify-content-center">
               <div class="card bg-secondary">
                 <img class="card-img" src="assets/yumsnap.png" alt="Yumsnap-app">
                 <div class="image-overlay">
@@ -258,9 +247,9 @@
                   <span class="card-title">YumSnap</span>
                   <div class="card-caption">
                     An web application that allows users to track their calories and macros intakes
-                    depending on users' age, sex, activity level, etc.
+                    depending on users' age, sex, activity level, etc.<br>
                     By fetching Nutrition API to get data from food database
-                    in terms of calculating nutritional needs for each individual user.
+                    in terms of calculating nutritional needs for each individual user.<br>
                     Perfect for someone who loves fitness or wants to change their body type. 
                   </div>
                 </div>
@@ -268,25 +257,9 @@
                   <h6>JS Bootstrap Express <span class="spacing">Nutrition API</span></h6>
                 </div>
               </div>
-              <div class="card bg-secondary invisible">
-                <!-- <img src="assets/Habita.png" alt="habita-app">
-                <div class="card-body">
-                  <span class="card-title">Habita</span>
-                </div>
-                <div class="card-footer">
-                  hi
-                </div> -->
-              </div>
-              <div class="card bg-secondary invisible">
-                <!-- <img src="assets/Habita.png" alt="habita-app">
-                <div class="card-body">
-                  <span class="card-title">Habita</span>
-                </div>
-                <div class="card-footer">
-                  hi
-                </div> -->
-              </div>
             </div>
+            <!-- <div class="card-group gap-4 justify-content-center">
+            </div> -->
           </div>
         </div>
         <!-- contact -->
