--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <link rel="icon" type="image/x-icon" href="/assets/logo.PNG">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap CSS -->
-        <link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <!-- customized CSS-->
         <link href="style.css" rel="stylesheet">
         <!-- script -->
@@ -16,7 +16,7 @@
           }
         </script>
         <script src="https://kit.fontawesome.com/2d59bec3ec.js" crossorigin="anonymous"></script>
-        <script src="bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous" defer></script>
         <title>Jack Ieong</title>
     </head>
     <body>
