navbar added box-shadow, and changed media margin. Modified color on experience title

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <h2 class="box"><span class="text-primary fs-2 pt-2 pb-2">Experience</span></h2>
             <div class="row pt-3 pb-3 media-padding">
               <div class="mb-4 ms-3">
-                <b>Software Engineer Intern <span class="text-primary">@ Labour Affairs Bureau</span></b>
+                <b><span class="text-white">Software Engineer Intern</span> <span class="text-primary">@ Labour Affairs Bureau</span></b>
                 <br>
                 <span class="font-secondary">May 2021 - August 2021</span>
                 <br>
@@ -171,7 +171,7 @@
                   </div>
                 </div>
                 <br>
-                <b>Accounting Clerk <span class="text-primary">@ Daikin Airconditioning Ltd</span></b>
+                <b><span class="text-white">Accounting Clerk</span> <span class="text-primary">@ Daikin Airconditioning Ltd</span></b>
                 <br>
                 <span class="font-secondary">June 2020 - August 2020</span>
                 <div class="flex-container">
