modified card-caption content

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <div class="card-body">  
                   <span class="card-title">Vibe</span>
                   <div class="card-caption">
-                    I worked with a few friends to create this application with the goal of enhancing experience of party hosts and guests.<br>
+                    I worked with a few friends to create this application with the goal of enhancing the experience of party hosts and guests.<br>
                     Guests can pick their favorite songs and add them to the queue where everyone votes for the next song.<br>
                     By building this project, I gained more experience and knowledge on using Express, REST APIs and NoSQL.
                   </div>
@@ -248,7 +248,7 @@
                   <div class="card-caption">
                     An web application that allows users to track their calories and macros intakes
                     depending on users' age, sex, activity level, etc.<br>
-                    By fetching Nutrition API to get data from food database
+                    By fetching the Nutrition API to get data from the food database
                     in terms of calculating nutritional needs for each individual user.<br>
                     Perfect for someone who loves fitness or wants to change their body type. 
                   </div>
