added resume.pdf, first page animation duration adjustment responsively

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a class="nav-link nav-pill ps-4 pe-4 inv-delay-1" id="nav-item-3" href="#contact">Contact</a>
                       </li>
                       <li class="nav-item d-flex align-items-center ms-2">
-                        <button type="button" class="btn btn-primary ps-4 pe-4 inv-delay-1" id="nav-item-4" href="#">Resume</button>
+                        <a href="resume.pdf" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-primary ps-4 pe-4 inv-delay-1" id="nav-item-4">Resume</button></a>
                       </li>
                     </ul>
                   </div>
@@ -211,7 +211,7 @@
                 <div class="card-body">  
                   <span class="card-title">Vibe</span>
                   <div class="card-caption">
-                    I worked with a few friends to create this application with the goal of enhancing the experience of party hosts and guests.<br>
+                    I worked with a few friends to create this application with the goal of enhancing the experience of party hosts and guests on song selection at the party.<br>
                     Guests can pick their favorite songs and add them to the queue where everyone votes for the next song.<br>
                     By building this project, I gained more experience and knowledge on using Express, REST APIs and NoSQL.
                   </div>
