changed employer name

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                   </div>
                 </div>
                 <br>
-                <b><span class="text-white">Accounting Clerk</span> <span class="text-primary">@ Daikin Airconditioning Ltd</span></b>
+                <b><span class="text-white">Accounting Clerk</span> <span class="text-primary">@ Daikin Industries Ltd</span></b>
                 <br>
                 <span class="font-secondary">June 2020 - August 2020</span>
                 <div class="flex-container">
