Skills and resume updated

--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
                         </div>
                         <div class="row mt-2 justify-content-center" id="tech-item">
                           <div class="item rounded-pill">Express</div>
-                          <div class="item rounded-pill">React.js</div>
                           <div class="item rounded-pill">Bootstrap</div>
+                          <div class="item rounded-pill">React.js</div>
+                          <div class="item rounded-pill">Redux</div>
                           <div class="item rounded-pill">MongoDB</div>
                           <div class="item rounded-pill">NoSQL</div>
                           <div class="item rounded-pill">Heroku</div>
-                          <div class="item rounded-pill">Netlify</div>
                         </div>
                       </div>
                       <div class="col-lg-4 mt-3">
