resume and website updated

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                           <div class="item rounded-pill">Bootstrap</div>
                           <div class="item rounded-pill">React.js</div>
                           <div class="item rounded-pill">Redux</div>
-                          <div class="item rounded-pill">MongoDB</div>
+                          <div class="item rounded-pill">Styled Components</div>
                           <div class="item rounded-pill">NoSQL</div>
                           <div class="item rounded-pill">Heroku</div>
                         </div>
@@ -145,6 +145,29 @@
             <h2 class="box"><span class="text-primary fs-2 pt-2 pb-2">Experience</span></h2>
             <div class="row pt-3 pb-3 media-padding">
               <div class="mb-4 ms-3">
+                <b><span class="text-white">Front End Developer</span> <span class="text-primary">@ BlogSpot</span></b>
+                <br>
+                <span class="font-secondary">July 2022 - Present</span>
+                <div class="flex-container">
+                  <div class="flex-arrow-right">
+                    <i class="fa fa-caret-right"></i>
+                  </div>
+                  <div class="flex-content">
+                    Developed and architected a highly interactive blogging application using React.js.  
+                  </div>
+                  <div class="flex-arrow-right">
+                    <i class="fa fa-caret-right"></i>
+                  </div>
+                  <div class="flex-content">
+                    Implemented API calls to obtain clients' information securely and stored their data in Cassandra Database. 
+                  </div>
+                  <div class="flex-arrow-right">
+                    <i class="fa fa-caret-right"></i>
+                  </div>
+                  <div class="flex-content">
+                    Organized code efficiently to ensure effective communication. Refactored and created components to enhance code reusability.                  </div>
+                </div>
+                <br>
                 <b><span class="text-white">Software Engineer Intern</span> <span class="text-primary">@ Labour Affairs Bureau</span></b>
                 <br>
                 <span class="font-secondary">May 2021 - August 2021</span>
