--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
                 <h2 class="box"><span class="text-primary fs-2 pt-2 pb-2">About Me</span></h2>
                 <div class="row pt-3 pb-3">
                     <div class="col-lg-8 col-md-12 col-sm-12 fs-4 mb-4 mt-2 ps-4" id="about-text">
-                      Hello! My name is Jack and I love building applications that impact the human kind and leave a mark on the world!
+                      Hello! My name is Jack and I love building applications that impact the humankind and leave a mark on the world!
                       <br><br>
                       My interest in web development was piqued back in 2018 when I came across <a href="https://www.shopify.com">Shopify</a>,
-                      which I used to design and launch eCommerence stores that sell products and services to customers across the globe.
+                      which I used to design and launch eCommerce stores that sell products and services to customers across the globe.
                       <br><br>
-                      That's the time when I began to go into depth of web development, and that taught me a lot about Javascript, HTML & CSS!
+                      That's the time when I began to go into depth of web development, and that taught me a lot about JavaScript, HTML & CSS!
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-6 d-flex align-items-center justify-content-center mt-4" id="photo">
                       <img src="assets/Jack-pfp.png" alt="jack-pfp" width="60%" id="pfp">
