--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                       My interest in web development was piqued back in 2018 when I came across <a href="https://www.shopify.com">Shopify</a>,
                       which I used to design and launch eCommerce stores that sell products and services to customers across the globe.
                       <br><br>
-                      That's the time when I began to go into depth of web development, and that taught me a lot about JavaScript, HTML & CSS!
+                      That's the time when I began to go into the depth of web development, and that taught me a lot about JavaScript, HTML & CSS!
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-6 d-flex align-items-center justify-content-center mt-4" id="photo">
                       <img src="assets/Jack-pfp.png" alt="jack-pfp" width="60%" id="pfp">
