resume, skills, experience and projects updated

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <div class="fs-4 pt-2 pb-2 fade-in" id="first-3">
                 I am passionate in designing and building applications that can benefit the human kind and
-                change the world. Currently, I am a rising senior in the major of computer science at
+                change the world. Currently, I am a senior in the major of computer science at
               <a href="https://www.umass.edu">UMass Amherst</a>.
             </div>
           </div>
@@ -98,6 +98,7 @@
                           <div class="item rounded-pill">Javascript</div>
                           <div class="item rounded-pill">Python</div>
                           <div class="item rounded-pill">Java</div>
+                          <div class="item rounded-pill">C#</div>
                           <div class="item rounded-pill">SQL</div>
                           <div class="item rounded-pill">C</div>
                         </div>
@@ -110,13 +111,14 @@
                         Technologies
                         </div>
                         <div class="row mt-2 justify-content-center" id="tech-item">
-                          <div class="item rounded-pill">Express</div>
-                          <div class="item rounded-pill">Bootstrap</div>
                           <div class="item rounded-pill">React.js</div>
                           <div class="item rounded-pill">Redux</div>
-                          <div class="item rounded-pill">Styled Components</div>
+                          <div class="item rounded-pill">Express</div>
+                          <div class="item rounded-pill">Docker</div>
+                          <div class="item rounded-pill">Microservices</div>
                           <div class="item rounded-pill">NoSQL</div>
-                          <div class="item rounded-pill">Heroku</div>
+                          <div class="item rounded-pill">Styled Components</div>
+                          <div class="item rounded-pill">Bootstrap</div>
                         </div>
                       </div>
                       <div class="col-lg-4 mt-3">
@@ -129,6 +131,7 @@
                         <div class="row mt-2 justify-content-center" id="tool-item">
                           <div class="item rounded-pill">Github</div>
                           <div class="item rounded-pill">Postman</div>
+                          <div class="item rounded-pill">Thunder Client</div>
                           <div class="item rounded-pill">API Testing</div>
                           <div class="item rounded-pill">Version Control</div>
                           <div class="item rounded-pill">VS Code</div>
@@ -145,30 +148,31 @@
             <h2 class="box"><span class="text-primary fs-2 pt-2 pb-2">Experience</span></h2>
             <div class="row pt-3 pb-3 media-padding">
               <div class="mb-4 ms-3">
-                <b><span class="text-white">Front End Developer</span> <span class="text-primary">@ BlogSpot</span></b>
+                <b><span class="text-white">Full Stack Developer</span> <span class="text-primary">@ UTrade</span></b>
                 <br>
-                <span class="font-secondary">July 2022 - Present</span>
+                <span class="font-secondary">May 2022 - Present</span>
                 <div class="flex-container">
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Developed and architected a highly interactive blogging application using React.js.  
+                    Developed an application that serves as an online marketplace that facilitates between buyers and sellers by using React.js.
                   </div>
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Implemented API calls to obtain clients' information securely and stored their data in Cassandra Database. 
+                    Implemented API calls to obtain clients' information securely and stored them into MongoDB by using Axios.
                   </div>
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Organized code efficiently to ensure effective communication. Refactored and created components to enhance code reusability.                  </div>
+                    Organized code efficiently to ensure effective communication. Refactored and created components to enhance code reusability.
+                  </div>
                 </div>
                 <br>
-                <b><span class="text-white">Software Engineer Intern</span> <span class="text-primary">@ Labour Affairs Bureau</span></b>
+                <b><span class="text-white">Software Engineering Intern</span> <span class="text-primary">@ Labour Affairs Bureau</span></b>
                 <br>
                 <span class="font-secondary">May 2021 - August 2021</span>
                 <br>
@@ -177,20 +181,19 @@
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Conducted data cleaning in Python
-                    to eliminate corrupted and incorrect data from the LAB database to ensure data consistency and integrity.
+                    Eliminated corrupted and incorrect data to ensure consistency and integrity by using Python.
                   </div>
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Collaborated with the IT team and the infrastructure team to set up patch automation for all Linux servers in LAB.
+                    Collaborated with the IT and infrastructure team to set up patch automation for all local Linux servers.                    Collaborated with the IT team and the infrastructure team to set up patch automation for all Linux servers in LAB.
                   </div>
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Interviewed workers for data collection to measure and analyze working conditions and labor market activities.
+                    Interviewed workers for data collection to analyze labor market activities.
                   </div>
                 </div>
                 <br>
@@ -202,13 +205,13 @@
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Processed outgoing invoices and incoming payments for 300+ ongoing customer accounts. Achieved 95% performance to goals.
+                    Processed outgoing invoices and incoming payments and achieved 95% performance to goals.
                   </div>
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Answered 20+ incoming calls per shift, communicated with vendors, customers, and colleagues to resolve inquiries and issues.
+                    Communicated with vendors, customers, and colleagues to resolve inquiries and issues.
                   </div>
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
@@ -227,14 +230,67 @@
             <h2 class="box"><span class="text-primary fs-2 pt-2 pb-2">Featured Projects</span></h2>
             <div class="card-group gap-4 justify-content-center pt-3">
               <div class="card bg-secondary">
-                <img class="card-img" src="assets/Vibe - Party Page.png" alt="party-page">
+                <img class="card-img" src="assets/Utrade.png" alt="Utrade-page">
+                <div class="image-overlay">
+                    <a href="https://github.com/ieongch0106/utrade" target="_blank" rel="noopener noreferrer" alt="github" title="github"><i class="fa fa-github fa-2xl" id="utrade-icon1"></i></a>
+                </div>
+                <div class="card-body">  
+                  <span class="card-title">UTrade</span>
+                  <div class="card-caption">
+                    Developed an application that serves as an online marketplace that facilitates between buyers and sellers by using React.js.<br/>
+                    Implemented API calls to obtain clients' information securely and stored them into MongoDB by using Axios.
+                  </div>
+                </div>
+                <div class="card-footer">
+                  <h6>React.js Redux <span class="spacing">Styled Components</span> Express MongoDB </h6>
+                </div>
+              </div>
+              <div class="card bg-secondary">
+                <img class="card-img" src="assets/Newsly.png" alt="newsly-app">
+                <div class="image-overlay">
+                  <a href="https://github.com/ieongch0106/newsly" target="_blank" rel="noopener noreferrer" alt="github" title="github"><i class="fa fa-github fa-2xl" id="newsly-icon1"></i></a>
+                  <a href="https://newsly-api.netlify.app/" target="_blank" rel="noopener noreferrer" alt="app" title="app"><i class="fa fa-arrow-up-right-from-square fa-2xl" id="newsly-icon2"></i></a>
+                </div>
+                <div class="card-body">
+                  <span class="card-title">Newsly</span>
+                  <div class="card-caption">
+                    Implemented a news application that fetches live-breaking news from NewsData.io.<br />
+                    I gained knowledge in handling with API calls and using React.js through this project.
+                  </div>
+                </div>
+                <div class="card-footer">
+                  <h6>React.js Axios NewsData.io Netlify</h6>
+                </div>
+              </div>
+              <div class="card bg-secondary">
+                <img class="card-img" src="assets/Blogspot.png" alt="blogspot-app">
+                <div class="image-overlay">
+                  <a href="https://github.com/DarshGondalia/BlogSpot1" target="_blank" rel="noopener noreferrer" alt="github" title="github"><i class="fa fa-github fa-2xl" id="blogspot-icon1"></i></a>
+                </div>
+                <div class="card-body">  
+                  <span class="card-title">BlogSpot</span>
+                  <div class="card-caption">
+                    Developed and architected a highly interactive blogging application using React.js.<br/>
+                    Implemented API calls to obtain clients' information securely and stored their data in Cassandra Database.<br/>
+                  </div>
+                </div>
+                <div class="card-footer">
+                  <h6>React.js Redux Express Cassandra </h6>
+                </div>
+              </div>
+            </div>
+            <!-- <div class="card-group gap-4 justify-content-center">
+            </div> -->
+            <div class="card-group gap-4 justify-content-center pt-3">
+              <div class="card bg-secondary">
+                <img class="card-img" src="assets/Vibe - Party Page.png" alt="vibe-app">
                 <div class="image-overlay">
                     <a href="https://github.com/ieongch0106/vibe" target="_blank" rel="noopener noreferrer" alt="github" title="github"><i class="fa fa-github fa-2xl" id="vibe-icon1"></i></a>
                 </div>
                 <div class="card-body">  
                   <span class="card-title">Vibe</span>
                   <div class="card-caption">
-                    I worked with a few friends to create this application with the goal of enhancing the experience of party hosts and guests on song selection at the party.<br>
+                    I worked with a few friends at University to create this application with the goal of enhancing the user experience at the party.<br>
                     Guests can pick their favorite songs and add them to the queue where everyone votes for the next song.<br>
                     By building this project, I gained more experience and knowledge on using Express, REST APIs and NoSQL.
                   </div>
@@ -272,8 +328,7 @@
                     An web application that allows users to track their calories and macros intakes
                     depending on users' age, sex, activity level, etc.<br>
                     By fetching the Nutrition API to get data from the food database
-                    in terms of calculating nutritional needs for each individual user.<br>
-                    Perfect for someone who loves fitness or wants to change their body type. 
+                    for calculating nutritional needs for each individual user.<br>
                   </div>
                 </div>
                 <div class="card-footer">
@@ -281,8 +336,6 @@
                 </div>
               </div>
             </div>
-            <!-- <div class="card-group gap-4 justify-content-center">
-            </div> -->
           </div>
         </div>
         <!-- contact -->
