pfp, skills and experience updated

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                       That's the time when I began to go into the depth of web development, and that taught me a lot about JavaScript, HTML & CSS!
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-6 d-flex align-items-center justify-content-center mt-4" id="photo">
-                      <img src="assets/Jack-pfp.png" alt="jack-pfp" width="60%" id="pfp">
+                      <img src="assets/Jack-pfp.png" alt="jack-pfp" id="pfp">
                     </div>
                   <div class="mt-5"></div>
                       <div class="col-lg-4 mt-3">
@@ -95,12 +95,12 @@
                         <div class="row mt-2 justify-content-center" id="language-item">
                           <div class="item rounded-pill">HTML</div>
                           <div class="item rounded-pill">CSS</div>
-                          <div class="item rounded-pill">Javascript</div>
+                          <div class="item rounded-pill">JavaScript</div>
+                          <div class="item rounded-pill">TypeScript</div>
                           <div class="item rounded-pill">Python</div>
-                          <div class="item rounded-pill">Java</div>
                           <div class="item rounded-pill">C#</div>
+                          <div class="item rounded-pill">Java</div>
                           <div class="item rounded-pill">SQL</div>
-                          <div class="item rounded-pill">C</div>
                         </div>
                       </div>
                       <div class="col-lg-4 mt-3">
@@ -148,30 +148,6 @@
             <h2 class="box"><span class="text-primary fs-2 pt-2 pb-2">Experience</span></h2>
             <div class="row pt-3 pb-3 media-padding">
               <div class="mb-4 ms-3">
-                <b><span class="text-white">Full Stack Developer</span> <span class="text-primary">@ UTrade</span></b>
-                <br>
-                <span class="font-secondary">May 2022 - Present</span>
-                <div class="flex-container">
-                  <div class="flex-arrow-right">
-                    <i class="fa fa-caret-right"></i>
-                  </div>
-                  <div class="flex-content">
-                    Developed an application that serves as an online marketplace that facilitates between buyers and sellers by using React.js.
-                  </div>
-                  <div class="flex-arrow-right">
-                    <i class="fa fa-caret-right"></i>
-                  </div>
-                  <div class="flex-content">
-                    Implemented API calls to obtain clients' information securely and stored them into MongoDB by using Axios.
-                  </div>
-                  <div class="flex-arrow-right">
-                    <i class="fa fa-caret-right"></i>
-                  </div>
-                  <div class="flex-content">
-                    Organized code efficiently to ensure effective communication. Refactored and created components to enhance code reusability.
-                  </div>
-                </div>
-                <br>
                 <b><span class="text-white">Software Engineering Intern</span> <span class="text-primary">@ Labour Affairs Bureau</span></b>
                 <br>
                 <span class="font-secondary">May 2021 - August 2021</span>
@@ -194,6 +170,30 @@
                   </div>
                   <div class="flex-content">
                     Interviewed workers for data collection to analyze labor market activities.
+                  </div>
+                </div>
+                <br>
+                <b><span class="text-white">Undergraduate Course Assistant</span> <span class="text-primary">@ University of Massachusetts Amherst</span></b>
+                <br>
+                <span class="font-secondary">September 2022 - Present</span>
+                <div class="flex-container">
+                  <div class="flex-arrow-right">
+                    <i class="fa fa-caret-right"></i>
+                  </div>
+                  <div class="flex-content">
+                    Served as a mentor for web programming courses and assisted professors in developing courses.
+                  </div>
+                  <div class="flex-arrow-right">
+                    <i class="fa fa-caret-right"></i>
+                  </div>
+                  <div class="flex-content">
+                    Held office hours to answer students’ questions and helped them understand various technical competencies.
+                  </div>
+                  <div class="flex-arrow-right">
+                    <i class="fa fa-caret-right"></i>
+                  </div>
+                  <div class="flex-content">
+                    Debugged and graded students’ projects and provided concrete feedback to further their coding skills.
                   </div>
                 </div>
                 <br>
